[tool.poetry]
name = "poetry"
version = "0.1.0"
description = "\"poetry and FastAPI\""
authors = ["Rishabh Singh"]

[tool.poetry.dependencies]
python = "^3.10"
aioauth-fastapi = "^0.1.0"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
